FullQa New/src/objects/Zip_Code__c.object
<CustomObject>
    <description>Purpose: Segment zip codes into Regions for sales Team, leads,  and Opportunity routing
Integrated: Yes, multiple workflows and formulas established on Lead and opportunity records
Change: Level 1 
Custodian: Sales Operation  - Amy Moser</description>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_RSM_ID__c</fullName>
        <formula>RSM_Territory__r.Sales_Rep_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned RSM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Assigned__c</fullName>
        <formula>RSM_Territory__r.Territory_Sales_Rep__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM Territory</label>
        <referenceTo>RSM_Territory__c</referenceTo>
        <relationshipLabel>Zip Codes</relationshipLabel>
        <relationshipName>Zip_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Manager__c</fullName>
        <formula>Region__r.Region_Manager__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Text__c</fullName>
        <description>Used to allow formula fields to keep the size down. Stamps from a work flow rule when a zipcode region is adjusted.</description>
        <label>Region Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>RSM_Region__c</referenceTo>
        <relationshipLabel>Zip Codes</relationshipLabel>
        <relationshipName>Zip_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAM_Initial__c</fullName>
        <label>TAM Accounts (Initial)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tactician_Region__c</fullName>
        <label>Tactician Region</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Ex__c</fullName>
        <externalId>true</externalId>
        <label>Zip Code External ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Zip Code</label>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>Area_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Manager__c</columns>
        <columns>RSM_Assigned__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
    </listViews>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>